added comment on how to run